# conway-rust

./: Cargo.toml  README.md
games/: acorn_chars.txt  acorn_coords.txt  double_gun.txt  gliders.txt  gosper.txt  heavy_ships.txt  remnants.txt  spider.txt
src/: game_of_life.rs  lib.rs  main.rs  render.rs
